tests/ui/const-generics/gce-ice-101557.stderr
error[E0119]: conflicting implementations of trait `From<A<[i8; _]>>` for type `A<[i8; _]>`
  --> $DIR/gce-ice-101557.rs:23:1
   |
LL | impl<T: Trait> From<A<[i8; T::CONST]>> for A<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> From<T> for T;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
